# qml-colorpicker

./: CMakeLists.txt  LICENSE  README.md
colorpicker/: Colorpicker.qml  Colorpicker.qrc  colorpicker.qml
colorpicker/content/: Checkerboard.qml  ColorSlider.qml  ColorUtils.js  NumberBox.qml  Palette.qml  Palettes.qml  Paletts.qml  PanelBorder.qml  SBPicker.qml  SinglePalette.qml  SizeConfigrator.qml
test/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  test.pro
